--- a/index.html
+++ b/index.html
@@ -1,53 +1,237 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" class="full-height" >
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>FrontEnd</title>
+    <title>Earl Perez</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Open+Sans|Raleway|Roboto+Condensed" rel="stylesheet">
-    <script src="index.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.4/css/mdb.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
 </head>
 <body>
-    <div class="main">
-        <div class="intro">
-            <div class="intro-text">
-                Earl Perez
-                <p>Software Developer</p>
+    <nav class="navbar navbar-expand-sm navbar-dark elegant-color-dark fixed-top scrolling-navbar">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav nav" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="pill" role="tab" href="#intro">Earl Perez</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="pill" role="tab" href="#about">About Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="pill" role="tab" href="#portfolio">My Work</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="pill" role="tab" href="#contact">Contact Info</a>
+                    </li>
+                </ul>
             </div>
         </div>
-        <div class="portfolio">
-            <div class="projects">
-                <div class="project project-1">
-                    <div class="project-text">
-                        <p>Alameda Uprising</p>
-                    </div>
-                </div>
-                <div class="project project-2">
-                    <div class="project-text">
-                        <p>FORUM'd</p>
-                    </div>
-                </div>
-                <div class="project project-3">
-                    <div class="project-text">
-                        <p>React Weather</p>
-                    </div>
-                </div>
-                <div class="project project-4">
-                    <div class="project-text">
-                        <p>Project title</p>
-                    </div>
+    </nav>
+    <div class="tab-content">
+        <div class="tab-pane fade" id="intro" role="tabpanel" aria-labelledby="intro-tab">
+            <div class="view intro-section full-bg-img flex-center">
+                <div class="container">
+                    <ul>
+                        <li>
+                            <h1 class="h1-responsive font-bold wow fadeIn" data-wow-delay="0.1s">Earl Perez</h1>
+                        </li>
+                        <li>
+                            <p class="lead mt-4 mb-5 wow fadeInDown" data-wow-delay="0.5s">Software Engineer</p>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
-        <div class="content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras arcu velit, ullamcorper non pharetra sagittis, pretium ut diam. Vestibulum et augue eu ex consequat faucibus. Cras ultricies augue rhoncus sem aliquet, ut molestie tellus pretium. Mauris finibus tristique arcu vel tristique. Praesent blandit orci vel aliquam consectetur. Aliquam eleifend tortor a feugiat tincidunt. Nulla venenatis libero nec odio feugiat, vitae rutrum orci viverra. In ut mattis nulla. Cras ac interdum nibh. Donec ac sem velit. Fusce diam sem, egestas vitae nibh vitae, vehicula rutrum libero. Vivamus egestas, nisi sed egestas mattis, nibh elit pulvinar sem, id porttitor arcu nunc et arcu.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras arcu velit, ullamcorper non pharetra sagittis, pretium ut diam. Vestibulum et augue eu ex consequat faucibus. Cras ultricies augue rhoncus sem aliquet, ut molestie tellus pretium. Mauris finibus tristique arcu vel tristique. Praesent blandit orci vel aliquam consectetur. Aliquam eleifend tortor a feugiat tincidunt. Nulla venenatis libero nec odio feugiat, vitae rutrum orci viverra. In ut mattis nulla. Cras ac interdum nibh. Donec ac sem velit. Fusce diam sem, egestas vitae nibh vitae, vehicula rutrum libero. Vivamus egestas, nisi sed egestas mattis, nibh elit pulvinar sem, id porttitor arcu nunc et arcu.</p>
+        <div class="tab-pane fade" id="about" role="tabpanel" aria-labelledby="about-tab">
+            <div class="container">
+                <hr>
+                <div class="divider-new pt-5">
+                    <h2 class="h2-responsive wow fadeIn" data-wow-delay="0.2s">About Me</h2>
+                </div>
+                <section class="text-center wow fadeIn" data-wow-delay="0.2s">
+                    <p>I am an aspiring Software Engineer currently studying Computer Science at California State University. I learned my first programming language in 2015 and have since then added new languages and technologies to my repertoire. I have mostly been exploring the ever-evolving world of JavaScript and enjoying every bit of it.</p>
+                    <p>Other than that, I like to read Fantasy books in my free time and working out at the gym. I am also a longtime basketball fan and I bleed purple and gold for the Los Angeles Lakers. So I have been bleeding for the past 5 NBA seasons.</p>
+                </section>
+                <div class="divider-new pt-5">
+                    <h2 class="h2-responsive wow fadeIn" data-wow-delay="0.2s">Education</h2>
+                </div>
+                <section class="text-center wow fadeIn" data-wow-delay="0.2s">
+                    <p>California State University Sacramento</p>
+                    <p>Bachelors of Science Computer Science</p>
+                    <p>2014 - present</p>
+                </section>
+                <div class="divider-new pt-5">
+                    <h2 class="h2-responsive wow fadeIn" data-wow-delay="0.2s">Skills</h2>
+                </div>
+                <section class="text-center wow fadeIn" data-wow-delay="0.2s">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-6">
+                                <p>JavaScript</p>
+                                <p>Python</p>
+                                <p>Java</p>
+                                <p>SQL</p>
+                                <p>HTML/CSS</p>
+                            </div>
+                            <div class="col-6">
+                                <p>Node.js</p>
+                                <p>MongoDB</p>
+                                <p>MySQL</p>
+                                <p>Git/GitHub</p>
+                                <p>Heroku</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <hr>
+            </div>
+        </div>
+        <div class="tab-pane fade show active" id="portfolio" role="tabpanel" aria-labelledby="portfolio-tab">
+            <div class="container">
+                <hr>
+                <section class="py-4 text-center text-lg-left">
+                    <h1 class="h1 font-bold text-center mb-5 pt-4">Projects</h1>
+                    <div class="row wow fadeIn">
+                        <div class="col-lg-5 col-xl-5 pb-3">
+                            <div class="view overlay hm-white-slight rounded z-depth-2">
+                                <img src="https://mdbootstrap.com/img/Photos/Others/img%20(27).jpg" alt="Sample image for first version of blog listing"
+                                    class="img-fluid">
+                                <a>
+                                    <div class="mask"></div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-7 col-xl-7">
+                            <a href="" class="green-text">
+                            <h6 class="font-bold pb-1">
+                                <i class="fa fa-cutlery"></i> Food</h6>
+                            </a>
+                            <h3 class="mb-4 font-bold dark-grey-text">
+                            <strong>This is title of the news</strong>
+                            </h3>
+                            <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere
+                            possimus, omnis voluptas assumenda est, omnis dolor repellendus et aut officiis debitis aut rerum.</p>
+                            <p>by
+                            <a>
+                                <strong>Carine Fox</strong>
+                            </a>, 19/08/2018</p>
+                            <a class="btn btn-success btn-md mb-3">Read more</a>
+                        </div>
+                    </div>
+                    <hr class="mb-5 mt-5 pb-3">
+                    <div class="row wow fadeIn">
+                        <div class="col-lg-7 col-xl-7 pb-3">
+                            <a href="" class="pink-text">
+                            <h6 class="font-bold pb-1">
+                                <i class="fa fa-image"></i> Lifestyle</h6>
+                            </a>
+                            <h3 class="mb-4 font-bold dark-grey-text">
+                            <strong>This is title of the news</strong>
+                            </h3>
+                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque
+                            corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident et dolorum fuga.</p>
+                            <p>by
+                            <a>
+                                <strong>Carine Fox</strong>
+                            </a>, 14/08/2018</p>
+                            <a class="btn btn-pink btn-md mb-3">Read more</a>
+                        </div>
+                        <div class="col-lg-5 col-xl-5 mb-5">
+                            <div class="view overlay hm-white-slight rounded z-depth-2">
+                                <img src="https://mdbootstrap.com/img/Photos/Others/img%20(34).jpg" alt="Second image in the first version of blog listing"
+                                    class="img-fluid">
+                                <a>
+                                    <div class="mask"></div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <hr class="mb-5 mt-4 pb-3">
+                    <div class="row pb-5 wow fadeIn">
+                        <div class="col-lg-5 col-xl-5 pb-3">
+                            <div class="view overlay hm-white-slight rounded z-depth-2">
+                                <img src="https://mdbootstrap.com/img/Photos/Others/img (28).jpg" alt="Thrid image in the blog listing." class="img-fluid">
+                                <a>
+                                    <div class="mask"></div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-7 col-xl-7">
+                            <a href="" class="indigo-text">
+                            <h6 class="font-bold pb-1">
+                                <i class="fa fa-suitcase"></i> Travels</h6>
+                            </a>
+                            <h3 class="mb-4 font-bold dark-grey-text">
+                            <strong>This is title of the news</strong>
+                            </h3>
+                            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
+                            eos qui ratione voluptatem sequi nesciunt. Neque porro qui dolorem ipsum quia sit amet, consectetur.</p>
+                            <p>by
+                            <a>
+                                <strong>Carine Fox</strong>
+                            </a>, 11/08/2018</p>
+                            <a class="btn btn-indigo btn-md mb-3">Read more</a>
+                        </div>
+                    </div>
+                </section>                    
+            </div>
+        </div>
+        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+            <div class="container">
+                <hr>
+                <div class="divider-new">
+                    <h2 class="h2-responsive wow fadeIn">Contact Me</h2>
+                </div>            
+                <div class="row">
+                    <div class="col-md-12">
+                        <ul class="text-center list-unstyled">
+                            <li class="wow fadeIn" data-wow-delay="0.2s"><i class="fa fa-map-marker teal-text fa-2x"></i>
+                                <p>Sacramento, CA</p>
+                            </li>
+                            <li class="wow fadeIn mt-5 pt-2" data-wow-delay="0.4s"><i class="fa fa-envelope teal-text fa-2x"></i>
+                                <p>ebcperezcsc@gmail.com</p>
+                            </li>
+                            <li class="wow fadeIn mt-5 pt-2" data-wow-delay="0.4s">
+                                <p><i class="fa fa-linkedin-square teal-text fa-2x"></i></p> 
+                                <a target="_blank" href="https://www.linkedin.com/in/earl-perez-ba404aa0/">Check me out on LinkedIn</a>
+                            </li>
+                            <li class="wow fadeIn mt-5 pt-2" data-wow-delay="0.4s">
+                                <p><i class="fa fa-github teal-text fa-2x"></i></p> 
+                                <a target="_blank" href="https://github.com/ebcp-dev">Visit my GitHub profile</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <footer class="footer">
-        <p class="footer-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras arcu velit, ullamcorper non pharetra sagittis, pretium ut diam. Vestibulum et augue eu ex consequat faucibus. Cras ultricies augue rhoncus sem aliquet, ut molestie tellus pretium.</p>
+    <footer class="page-footer elegant-color-dark">
+        <div class="container">
+            <hr>
+            <h5 class="text-center">Earl Perez</h5>
+            <hr>
+        </div>
+        <div class="footer-copyright">
+            <div class="container-fluid">
+                <a class="white-text"> 2018 </a>
+            </div>
+        </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.4/js/mdb.min.js"></script>
+    <script src="https://maps.google.com/maps/api/js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
