--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </nav>
     <div class="tab-content">
-        <div class="tab-pane fade" id="intro" role="tabpanel" aria-labelledby="intro-tab">
+        <div class="tab-pane fade show active" id="intro" role="tabpanel" aria-labelledby="intro-tab">
             <div class="view intro-section full-bg-img flex-center">
                 <div class="container">
                     <ul>
@@ -95,93 +95,72 @@
                 <hr>
             </div>
         </div>
-        <div class="tab-pane fade show active" id="portfolio" role="tabpanel" aria-labelledby="portfolio-tab">
+        <div class="tab-pane fade" id="portfolio" role="tabpanel" aria-labelledby="portfolio-tab">
             <div class="container">
                 <hr>
                 <section class="py-4 text-center text-lg-left">
                     <h1 class="h1 font-bold text-center mb-5 pt-4">Projects</h1>
                     <div class="row wow fadeIn">
-                        <div class="col-lg-5 col-xl-5 pb-3">
-                            <div class="view overlay hm-white-slight rounded z-depth-2">
-                                <img src="https://mdbootstrap.com/img/Photos/Others/img%20(27).jpg" alt="Sample image for first version of blog listing"
-                                    class="img-fluid">
-                                <a>
-                                    <div class="mask"></div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-7 col-xl-7">
-                            <a href="" class="green-text">
+                        <div class="col-lg-7 col-xl-7 pb-3">
+                            <a href="" class="elegant-text">
                             <h6 class="font-bold pb-1">
-                                <i class="fa fa-cutlery"></i> Food</h6>
+                                <i class="fa fa-github-alt fa-lg"></i> Project</h6>
                             </a>
                             <h3 class="mb-4 font-bold dark-grey-text">
-                            <strong>This is title of the news</strong>
+                            <strong>FORUM'd</strong>
                             </h3>
-                            <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere
-                            possimus, omnis voluptas assumenda est, omnis dolor repellendus et aut officiis debitis aut rerum.</p>
-                            <p>by
-                            <a>
-                                <strong>Carine Fox</strong>
-                            </a>, 19/08/2018</p>
-                            <a class="btn btn-success btn-md mb-3">Read more</a>
+                            <p>FORUM'd is an online forum where users can register for accounts, submit either link posts or text posts, and comment on posts. Node.js/Express is used in the backend REST API. User and post data are stored in a MongoDB database. React is used to build the view layer of the app with Bootstrap for styling the UI. Passport.js and Bcrypt handle user authentication and password hashing respectively.</p>
+                            <p>December 2018</p>
+                            <a class="btn btn-elegant btn-md mb-3" target="_blank" href="https://theforumd.herokuapp.com/">Visit Project</a>
+                        </div>
+                        <div class="col-lg-5 col-xl-5 mb-5">
+                            <div class="view overlay rounded z-depth-2">
+                                <img src="./img/forumdss.png" alt="FORUM'd screenshot"
+                                    class="img-fluid">
+                            </div>
                         </div>
                     </div>
                     <hr class="mb-5 mt-5 pb-3">
                     <div class="row wow fadeIn">
-                        <div class="col-lg-7 col-xl-7 pb-3">
+                        <div class="col-lg-5 col-xl-5 pb-3">
+                            <div class="view overlay rounded z-depth-2">
+                                <img src="./img/ausitess.png" alt="Alameda Uprising website screenshot"
+                                    class="img-fluid">
+                            </div>
+                        </div>
+                        <div class="col-lg-7 col-xl-7">
                             <a href="" class="pink-text">
                             <h6 class="font-bold pb-1">
-                                <i class="fa fa-image"></i> Lifestyle</h6>
+                                <i class="fa fa-briefcase fa-lg"></i> Freelance/Volunteer</h6>
                             </a>
                             <h3 class="mb-4 font-bold dark-grey-text">
-                            <strong>This is title of the news</strong>
+                            <strong>Alameda Uprising Official Website</strong>
                             </h3>
-                            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque
-                            corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident et dolorum fuga.</p>
-                            <p>by
-                            <a>
-                                <strong>Carine Fox</strong>
-                            </a>, 14/08/2018</p>
-                            <a class="btn btn-pink btn-md mb-3">Read more</a>
-                        </div>
-                        <div class="col-lg-5 col-xl-5 mb-5">
-                            <div class="view overlay hm-white-slight rounded z-depth-2">
-                                <img src="https://mdbootstrap.com/img/Photos/Others/img%20(34).jpg" alt="Second image in the first version of blog listing"
-                                    class="img-fluid">
-                                <a>
-                                    <div class="mask"></div>
-                                </a>
-                            </div>
+                            <p>Official website of the Alameda Uprising AAU team. The website displays information about the team's schedule, current roster, staff, as well as any announcements. A Node.js/Express backend allows staff to edit team details as well as make announcements.</p>
+                            <p>July 2017</p>
+                            <a class="btn btn-cyan btn-md mb-3" target="_blank" href="http://www.alamedauprising.com/">Visit Project</a>
                         </div>
                     </div>
                     <hr class="mb-5 mt-4 pb-3">
                     <div class="row pb-5 wow fadeIn">
-                        <div class="col-lg-5 col-xl-5 pb-3">
-                            <div class="view overlay hm-white-slight rounded z-depth-2">
-                                <img src="https://mdbootstrap.com/img/Photos/Others/img (28).jpg" alt="Thrid image in the blog listing." class="img-fluid">
-                                <a>
-                                    <div class="mask"></div>
-                                </a>
-                            </div>
-                        </div>
                         <div class="col-lg-7 col-xl-7">
                             <a href="" class="indigo-text">
-                            <h6 class="font-bold pb-1">
-                                <i class="fa fa-suitcase"></i> Travels</h6>
-                            </a>
-                            <h3 class="mb-4 font-bold dark-grey-text">
-                            <strong>This is title of the news</strong>
-                            </h3>
-                            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
-                            eos qui ratione voluptatem sequi nesciunt. Neque porro qui dolorem ipsum quia sit amet, consectetur.</p>
-                            <p>by
-                            <a>
-                                <strong>Carine Fox</strong>
-                            </a>, 11/08/2018</p>
-                            <a class="btn btn-indigo btn-md mb-3">Read more</a>
+                                <h6 class="font-bold pb-1">
+                                    <i class="fa fa-github-alt fa-lg"></i> Project</h6>
+                                </a>
+                                <h3 class="mb-4 font-bold dark-grey-text">
+                                    <strong>React Weather App</strong>
+                                </h3>
+                                <p>A simple weather app made with React. The user can enter a location which will be sent to the Google Maps API. The app will then receive location details from Google Maps which will be used to query current weather data from Dark Sky API.</p>
+                                <p>December 2016</p>
+                                <a class="btn btn-green btn-md mb-3" target="_blank" href="https://ebcperez.github.io/reactjsweather/">Visit Project</a>
+                            </div>
+                            <div class="col-lg-5 col-xl-5 pb-3">
+                                <div class="view overlay rounded z-depth-2">
+                                    <img src="./img/reactjsweatherss.png" alt="React Weather screenshot" class="img-fluid">
+                                </div>
+                            </div>
                         </div>
-                    </div>
                 </section>                    
             </div>
         </div>
@@ -194,21 +173,22 @@
                 <div class="row">
                     <div class="col-md-12">
                         <ul class="text-center list-unstyled">
-                            <li class="wow fadeIn" data-wow-delay="0.2s"><i class="fa fa-map-marker teal-text fa-2x"></i>
+                            <li class="wow fadeIn" data-wow-delay="0.2s"><i class="fa fa-map-marker elegant-text fa-2x"></i>
                                 <p>Sacramento, CA</p>
                             </li>
-                            <li class="wow fadeIn mt-5 pt-2" data-wow-delay="0.4s"><i class="fa fa-envelope teal-text fa-2x"></i>
+                            <li class="wow fadeIn mt-5 pt-2" data-wow-delay="0.4s"><i class="fa fa-envelope elegant-text fa-2x"></i>
                                 <p>ebcperezcsc@gmail.com</p>
                             </li>
                             <li class="wow fadeIn mt-5 pt-2" data-wow-delay="0.4s">
-                                <p><i class="fa fa-linkedin-square teal-text fa-2x"></i></p> 
+                                <p><i class="fa fa-linkedin-square elegant-text fa-2x"></i></p> 
                                 <a target="_blank" href="https://www.linkedin.com/in/earl-perez-ba404aa0/">Check me out on LinkedIn</a>
                             </li>
                             <li class="wow fadeIn mt-5 pt-2" data-wow-delay="0.4s">
-                                <p><i class="fa fa-github teal-text fa-2x"></i></p> 
+                                <p><i class="fa fa-github elegant-text fa-2x"></i></p> 
                                 <a target="_blank" href="https://github.com/ebcp-dev">Visit my GitHub profile</a>
                             </li>
                         </ul>
+                        <hr>
                     </div>
                 </div>
             </div>
