--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <div class="tab-content">
         <div class="tab-pane fade show active" id="intro" role="tabpanel" aria-labelledby="intro-tab">
-            <div class="view intro-section full-bg-img flex-center">
+            <div class="view intro-bg full-bg-img flex-center">
                 <div class="container">
                     <ul>
                         <li>
@@ -92,7 +92,6 @@
                         </div>
                     </div>
                 </section>
-                <hr>
             </div>
         </div>
         <div class="tab-pane fade" id="portfolio" role="tabpanel" aria-labelledby="portfolio-tab">
@@ -103,8 +102,9 @@
                     <div class="row wow fadeIn">
                         <div class="col-lg-7 col-xl-7 pb-3">
                             <a href="" class="elegant-text">
-                            <h6 class="font-bold pb-1">
-                                <i class="fa fa-github-alt fa-lg"></i> Project</h6>
+                                <h6 class="font-bold pb-1">
+                                    <i class="fa fa-github-alt fa-lg"></i> Project
+                                </h6>
                             </a>
                             <h3 class="mb-4 font-bold dark-grey-text">
                             <strong>FORUM'd</strong>
@@ -129,9 +129,10 @@
                             </div>
                         </div>
                         <div class="col-lg-7 col-xl-7">
-                            <a href="" class="pink-text">
-                            <h6 class="font-bold pb-1">
-                                <i class="fa fa-briefcase fa-lg"></i> Freelance/Volunteer</h6>
+                            <a class="pink-text">
+                                <h6 class="font-bold pb-1">
+                                    <i class="fa fa-briefcase fa-lg"></i> Freelance/Volunteer
+                                </h6>
                             </a>
                             <h3 class="mb-4 font-bold dark-grey-text">
                             <strong>Alameda Uprising Official Website</strong>
@@ -144,51 +145,51 @@
                     <hr class="mb-5 mt-4 pb-3">
                     <div class="row pb-5 wow fadeIn">
                         <div class="col-lg-7 col-xl-7">
-                            <a href="" class="indigo-text">
+                            <a class="indigo-text">
                                 <h6 class="font-bold pb-1">
-                                    <i class="fa fa-github-alt fa-lg"></i> Project</h6>
-                                </a>
-                                <h3 class="mb-4 font-bold dark-grey-text">
-                                    <strong>React Weather App</strong>
-                                </h3>
-                                <p>A simple weather app made with React. The user can enter a location which will be sent to the Google Maps API. The app will then receive location details from Google Maps which will be used to query current weather data from Dark Sky API.</p>
-                                <p>December 2016</p>
-                                <a class="btn btn-green btn-md mb-3" target="_blank" href="https://ebcperez.github.io/reactjsweather/">Visit Project</a>
-                            </div>
-                            <div class="col-lg-5 col-xl-5 pb-3">
-                                <div class="view overlay rounded z-depth-2">
-                                    <img src="./img/reactjsweatherss.png" alt="React Weather screenshot" class="img-fluid">
-                                </div>
+                                    <i class="fa fa-github-alt fa-lg"></i> Project
+                                </h6>
+                            </a>
+                            <h3 class="mb-4 font-bold dark-grey-text">
+                                <strong>React Weather App</strong>
+                            </h3>
+                            <p>A simple weather app made with React. The user can enter a location which will be sent to the Google Maps API. The app will then receive location details from Google Maps which will be used to query current weather data from Dark Sky API.</p>
+                            <p>December 2016</p>
+                            <a class="btn btn-green btn-md mb-3" target="_blank" href="https://ebcperez.github.io/reactjsweather/">Visit Project</a>
+                        </div>
+                        <div class="col-lg-5 col-xl-5 pb-3">
+                            <div class="view overlay rounded z-depth-2">
+                                <img src="./img/reactjsweatherss.png" alt="React Weather screenshot" class="img-fluid">
                             </div>
                         </div>
+                    </div>
                 </section>                    
             </div>
         </div>
         <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-            <div class="container">
-                <br>
-                <div class="divider-new">
-                    <h2 class="h2-responsive wow fadeIn">Contact Me</h2>
-                </div>            
-                <div class="row">
-                    <div class="col-md-12">
-                        <ul class="text-center list-unstyled">
-                            <li class="wow fadeIn" data-wow-delay="0.2s"><i class="fa fa-map-marker elegant-text fa-2x"></i>
-                                <p>Sacramento, CA</p>
-                            </li>
-                            <li class="wow fadeIn mt-5 pt-2" data-wow-delay="0.4s"><i class="fa fa-envelope elegant-text fa-2x"></i>
-                                <p>ebcperezcsc@gmail.com</p>
-                            </li>
-                            <li class="wow fadeIn mt-5 pt-2" data-wow-delay="0.4s">
-                                <p><i class="fa fa-linkedin-square elegant-text fa-2x"></i></p> 
-                                <a target="_blank" href="https://www.linkedin.com/in/earl-perez-ba404aa0/">Check me out on LinkedIn</a>
-                            </li>
-                            <li class="wow fadeIn mt-5 pt-2" data-wow-delay="0.4s">
-                                <p><i class="fa fa-github elegant-text fa-2x"></i></p> 
-                                <a target="_blank" href="https://github.com/ebcp-dev">Visit my GitHub profile</a>
-                            </li>
-                        </ul>
-                    </div>
+            <div class="view contact-bg full-bg-img flex-center">
+                <div class="container">
+                    <ul>
+                        <li>
+                            <div class="divider-new">
+                                <h2 class="h2-responsive wow fadeInDown">Contact Me</h2>
+                            </div>  
+                        </li>
+                        <li class="wow fadeIn" data-wow-delay="0.2s"><i class="fa fa-map-marker elegant-text fa-2x"></i>
+                            <p>Sacramento, CA</p>
+                        </li>
+                        <li class="wow fadeIn mt-5 pt-2" data-wow-delay="0.4s"><i class="fa fa-envelope elegant-text fa-2x"></i>
+                            <p>ebcperezcsc@gmail.com</p>
+                        </li>
+                        <li class="wow fadeIn mt-5 pt-2" data-wow-delay="0.4s">
+                            <p><i class="fa fa-linkedin-square elegant-text fa-2x"></i></p> 
+                            <a class="white-text" target="_blank" href="https://www.linkedin.com/in/earl-perez-ba404aa0/">Check me out on LinkedIn</a>
+                        </li>
+                        <li class="wow fadeIn mt-5 pt-2" data-wow-delay="0.4s">
+                            <p><i class="fa fa-github elegant-text fa-2x"></i></p> 
+                            <a class="white-text" target="_blank" href="https://github.com/ebcp-dev">Visit my GitHub profile</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
