fixed project tags

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <h1 class="h1 font-bold text-center mb-5 pt-4">Projects</h1>
                     <div class="row wow fadeIn">
                         <div class="col-lg-7 col-xl-7 pb-3">
-                            <a href="" class="elegant-text">
+                            <a class="elegant-text">
                                 <h6 class="font-bold pb-1">
                                     <i class="fa fa-github-alt fa-lg"></i> Project
                                 </h6>
