added resume to navbar

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                         <a class="nav-link" data-toggle="pill" role="tab" href="#portfolio">My Work</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" target="_blank" href="./files/Resume.pdf">Resume</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" data-toggle="pill" role="tab" href="#contact">Contact Info</a>
                     </li>
                 </ul>
@@ -58,15 +61,15 @@
                     <h2 class="h2-responsive wow fadeIn" data-wow-delay="0.2s">About Me</h2>
                 </div>
                 <section class="text-center wow fadeIn" data-wow-delay="0.2s">
-                    <p>I am an aspiring Software Engineer currently studying Computer Science at California State University. I learned my first programming language in 2015 and have since then added new languages and technologies to my repertoire. I have mostly been exploring the ever-evolving world of JavaScript and enjoying every bit of it.</p>
+                    <p>I am an aspiring Software Engineer currently studying Computer Science at California State University. I learned my first programming language in 2015 and have since then added new languages and technologies to my repertoire. I have mostly been exploring the ever-evolving world of JavaScript but I have also dipped my toes into Python.</p>
                     <p>Other than that, I like to read Fantasy books in my free time and working out at the gym. I am also a longtime basketball fan and I bleed purple and gold for the Los Angeles Lakers. So I have been bleeding for the past 5 NBA seasons.</p>
                 </section>
                 <div class="divider-new pt-5">
                     <h2 class="h2-responsive wow fadeIn" data-wow-delay="0.2s">Education</h2>
                 </div>
                 <section class="text-center wow fadeIn" data-wow-delay="0.2s">
-                    <p>California State University Sacramento</p>
                     <p>Bachelors of Science Computer Science</p>
+                    <p>California State University Sacramento</p>
                     <p>2014 - present</p>
                 </section>
                 <div class="divider-new pt-5">
@@ -106,6 +109,7 @@
                                     <i class="fa fa-github-alt fa-lg"></i> Project
                                 </h6>
                             </a>
+                            <p>React, React Router, Node.js/Express, MongoDB, Passport.js, Bcrypt, JavaScript, HTML/CSS</p>
                             <h3 class="mb-4 font-bold dark-grey-text">
                             <strong>FORUM'd</strong>
                             </h3>
@@ -129,11 +133,12 @@
                             </div>
                         </div>
                         <div class="col-lg-7 col-xl-7">
-                            <a class="pink-text">
+                            <a class="cyan-text">
                                 <h6 class="font-bold pb-1">
                                     <i class="fa fa-briefcase fa-lg"></i> Freelance/Volunteer
                                 </h6>
                             </a>
+                            <p class="cyan-text">Node.js/Express, MongoDB, Passport.js, Bcrypt, Handlebars, JavaScript, HTML/CSS</p>
                             <h3 class="mb-4 font-bold dark-grey-text">
                             <strong>Alameda Uprising Official Website</strong>
                             </h3>
@@ -145,11 +150,12 @@
                     <hr class="mb-5 mt-4 pb-3">
                     <div class="row pb-5 wow fadeIn">
                         <div class="col-lg-7 col-xl-7">
-                            <a class="indigo-text">
+                            <a class="green-text">
                                 <h6 class="font-bold pb-1">
                                     <i class="fa fa-github-alt fa-lg"></i> Project
                                 </h6>
                             </a>
+                            <p class="green-text">React, Axios, Google Maps API, Dark Sky API, JavaScript, HTML/CSS</p>
                             <h3 class="mb-4 font-bold dark-grey-text">
                                 <strong>React Weather App</strong>
                             </h3>
@@ -167,7 +173,7 @@
             </div>
         </div>
         <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-            <div class="view contact-bg full-bg-img flex-center">
+            <div class="view contact-bg hm-black-strong flex-center">
                 <div class="container">
                     <ul>
                         <li>
