updated resume, content

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" class="full-height" >
+<html lang="en" class="full-height">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -8,10 +9,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat|Open+Sans|Raleway|Roboto+Condensed" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.4/css/mdb.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
 </head>
+
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark elegant-color-dark fixed-top scrolling-navbar">
         <div class="container">
@@ -61,12 +64,22 @@
                     <h2 class="h2-responsive wow fadeIn" data-wow-delay="0.2s">About Me</h2>
                 </div>
                 <section class="text-center wow fadeIn" data-wow-delay="0.2s">
-                    <p>I am an aspiring Software Engineer currently studying Computer Science at California State University. I learned my first programming language in 2015 and have since then added new languages and technologies to my repertoire. I have mostly been exploring the ever-evolving world of JavaScript but I have also dipped my toes into Python.</p>
-                    <p>Other than that, I like to read Fantasy books in my free time and working out at the gym. I am also a longtime basketball fan and I bleed purple and gold for the Los Angeles Lakers. So I have been bleeding for the past 5 NBA seasons.</p>
+                    <p>I am an aspiring Software Engineer currently studying Computer Science at California State University.
+                        I learned my first programming language in 2015 and have since then added new languages and technologies
+                        to my repertoire. I have mostly been exploring the ever-evolving world of JavaScript but I have also
+                        dipped my toes into Python.</p>
+                    <p>Other than that, I like to read Fantasy books in my free time and working out at the gym. I am also a
+                        longtime basketball fan and I bleed purple and gold for the Los Angeles Lakers. So I have been bleeding
+                        for the past 5 NBA seasons.</p>
                 </section>
                 <div class="divider-new pt-5">
                     <h2 class="h2-responsive wow fadeIn" data-wow-delay="0.2s">Education</h2>
                 </div>
+                <section class="text-center wow fadeIn" data-wow-delay="0.2s">
+                    <p>Bachelors of Science Computer Science</p>
+                    <p>Western Governors University</p>
+                    <p>2018 - 2019</p>
+                </section>
                 <section class="text-center wow fadeIn" data-wow-delay="0.2s">
                     <p>Bachelors of Science Computer Science</p>
                     <p>California State University Sacramento</p>
@@ -78,18 +91,27 @@
                 <section class="text-center wow fadeIn" data-wow-delay="0.2s">
                     <div class="container">
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-4">
                                 <p>JavaScript</p>
-                                <p>Python</p>
                                 <p>Java</p>
+                                <p>Go</p>
                                 <p>SQL</p>
                                 <p>HTML/CSS</p>
                             </div>
-                            <div class="col-6">
+                            <div class="col-4">
                                 <p>Node.js</p>
+                                <p>React</p>
+                                <p>Redux</p>
+                                <p>Vue</p>
+                                <p>Webpack</p>
+                                <p>Mocha</p>
+                                <p>Travis CI</p>
+                            </div>
+                            <div class="col-4">
+                                <p>PostgreSQL</p>
                                 <p>MongoDB</p>
                                 <p>MySQL</p>
-                                <p>Git/GitHub</p>
+                                <p>Git</p>
                                 <p>Heroku</p>
                             </div>
                         </div>
@@ -111,16 +133,19 @@
                             </a>
                             <p>React, React Router, Node.js/Express, MongoDB, Passport.js, Bcrypt, JavaScript, HTML/CSS</p>
                             <h3 class="mb-4 font-bold dark-grey-text">
-                            <strong>FORUM'd</strong>
+                                <strong>FORUM'd</strong>
                             </h3>
-                            <p>FORUM'd is an online forum where users can register for accounts, submit either link posts or text posts, and comment on posts. Node.js/Express is used in the backend REST API. User and post data are stored in a MongoDB database. React is used to build the view layer of the app with Bootstrap for styling the UI. Passport.js and Bcrypt handle user authentication and password hashing respectively.</p>
-                            <p>December 2018</p>
+                            <p>FORUM'd is an online forum where users can register for accounts, submit either link posts or
+                                text posts, and comment on posts. Node.js/Express is used in the backend REST API. User and
+                                post data are stored in a MongoDB database. React is used to build the view layer of the
+                                app with Bootstrap for styling the UI. Passport.js and Bcrypt handle user authentication
+                                and password hashing respectively.</p>
+                            <p>January 2018</p>
                             <a class="btn btn-elegant btn-md mb-3" target="_blank" href="https://theforumd.herokuapp.com/">Visit Project</a>
                         </div>
                         <div class="col-lg-5 col-xl-5 mb-5">
                             <div class="view overlay rounded z-depth-2">
-                                <img src="./img/forumdss.png" alt="FORUM'd screenshot"
-                                    class="img-fluid">
+                                <img src="./img/forumdss.png" alt="FORUM'd screenshot" class="img-fluid">
                             </div>
                         </div>
                     </div>
@@ -128,8 +153,7 @@
                     <div class="row wow fadeIn">
                         <div class="col-lg-5 col-xl-5 pb-3">
                             <div class="view overlay rounded z-depth-2">
-                                <img src="./img/ausitess.png" alt="Alameda Uprising website screenshot"
-                                    class="img-fluid">
+                                <img src="./img/ausitess.png" alt="Alameda Uprising website screenshot" class="img-fluid">
                             </div>
                         </div>
                         <div class="col-lg-7 col-xl-7">
@@ -140,9 +164,11 @@
                             </a>
                             <p class="cyan-text">Node.js/Express, MongoDB, Passport.js, Bcrypt, Handlebars, JavaScript, HTML/CSS</p>
                             <h3 class="mb-4 font-bold dark-grey-text">
-                            <strong>Alameda Uprising Official Website</strong>
+                                <strong>Alameda Uprising Official Website</strong>
                             </h3>
-                            <p>Official website of the Alameda Uprising AAU team. The website displays information about the team's schedule, current roster, staff, as well as any announcements. A Node.js/Express backend allows staff to edit team details as well as make announcements.</p>
+                            <p>Official website of the Alameda Uprising AAU team. The website displays information about the
+                                team's schedule, current roster, staff, as well as any announcements. A Node.js/Express backend
+                                allows staff to edit team details as well as make announcements.</p>
                             <p>July 2017</p>
                             <a class="btn btn-cyan btn-md mb-3" target="_blank" href="http://www.alamedauprising.com/">Visit Project</a>
                         </div>
@@ -159,7 +185,9 @@
                             <h3 class="mb-4 font-bold dark-grey-text">
                                 <strong>React Weather App</strong>
                             </h3>
-                            <p>A simple weather app made with React. The user can enter a location which will be sent to the Google Maps API. The app will then receive location details from Google Maps which will be used to query current weather data from Dark Sky API.</p>
+                            <p>A simple weather app made with React. The user can enter a location which will be sent to the
+                                Google Maps API. The app will then receive location details from Google Maps which will be
+                                used to query current weather data from Dark Sky API.</p>
                             <p>December 2016</p>
                             <a class="btn btn-green btn-md mb-3" target="_blank" href="https://ebcperez.github.io/reactjsweather/">Visit Project</a>
                         </div>
@@ -169,7 +197,7 @@
                             </div>
                         </div>
                     </div>
-                </section>                    
+                </section>
             </div>
         </div>
         <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
@@ -179,20 +207,26 @@
                         <li>
                             <div class="divider-new">
                                 <h2 class="h2-responsive wow fadeInDown">Contact Me</h2>
-                            </div>  
+                            </div>
                         </li>
-                        <li class="wow fadeIn" data-wow-delay="0.2s"><i class="fa fa-map-marker elegant-text fa-2x"></i>
+                        <li class="wow fadeIn" data-wow-delay="0.2s">
+                            <i class="fa fa-map-marker elegant-text fa-2x"></i>
                             <p>Sacramento, CA</p>
                         </li>
-                        <li class="wow fadeIn mt-5 pt-2" data-wow-delay="0.4s"><i class="fa fa-envelope elegant-text fa-2x"></i>
+                        <li class="wow fadeIn mt-5 pt-2" data-wow-delay="0.4s">
+                            <i class="fa fa-envelope elegant-text fa-2x"></i>
                             <p>ebcperezcsc@gmail.com</p>
                         </li>
                         <li class="wow fadeIn mt-5 pt-2" data-wow-delay="0.4s">
-                            <p><i class="fa fa-linkedin-square elegant-text fa-2x"></i></p> 
+                            <p>
+                                <i class="fa fa-linkedin-square elegant-text fa-2x"></i>
+                            </p>
                             <a class="white-text" target="_blank" href="https://www.linkedin.com/in/earl-perez-ba404aa0/">Check me out on LinkedIn</a>
                         </li>
                         <li class="wow fadeIn mt-5 pt-2" data-wow-delay="0.4s">
-                            <p><i class="fa fa-github elegant-text fa-2x"></i></p> 
+                            <p>
+                                <i class="fa fa-github elegant-text fa-2x"></i>
+                            </p>
                             <a class="white-text" target="_blank" href="https://github.com/ebcp-dev">Visit my GitHub profile</a>
                         </li>
                     </ul>
@@ -213,10 +247,13 @@
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.4.4/js/mdb.min.js"></script>
     <script src="index.js"></script>
 </body>
+
 </html>
