updated about, skills sections

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                         <a class="nav-link" data-toggle="pill" role="tab" href="#portfolio">My Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="./files/Resume.pdf">Resume</a>
+                        <a class="nav-link" data-toggle="pill" role="tab" href="#contact">Contact Info</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="pill" role="tab" href="#contact">Contact Info</a>
+                        <a class="nav-link" target="_blank" href="./files/Resume.pdf">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -64,27 +64,32 @@
                     <h2 class="h2-responsive wow fadeIn" data-wow-delay="0.2s">About Me</h2>
                 </div>
                 <section class="text-center wow fadeIn" data-wow-delay="0.2s">
-                    <p>I am an aspiring Software Engineer currently studying Computer Science at California State University.
-                        I learned my first programming language in 2015 and have since then added new languages and technologies
-                        to my repertoire. I have mostly been exploring the ever-evolving world of JavaScript but I have also
-                        dipped my toes into Python.</p>
-                    <p>Other than that, I like to read Fantasy books in my free time and working out at the gym. I am also a
-                        longtime basketball fan and I bleed purple and gold for the Los Angeles Lakers. So I have been bleeding
-                        for the past 5 NBA seasons.</p>
+                    <p>
+                        I am an aspiring Software Engineer currently finishing my Computer Science degree at Western Governors University. While
+                        in school, I taught myself web development in order to prepare myself for full time positions. I
+                        learned how to develop web applications with: Node.js, Go, React, MongoDB and PostgreSQL with several
+                        projects in my
+                        <a class="green-text" href="https://github.com/ebcp-dev/">
+                            GitHub
+                        </a>.
+                    </p>
                 </section>
                 <div class="divider-new pt-5">
                     <h2 class="h2-responsive wow fadeIn" data-wow-delay="0.2s">Education</h2>
                 </div>
-                <section class="text-center wow fadeIn" data-wow-delay="0.2s">
-                    <p>Bachelors of Science Computer Science</p>
-                    <p>Western Governors University</p>
-                    <p>2018 - 2019</p>
-                </section>
-                <section class="text-center wow fadeIn" data-wow-delay="0.2s">
-                    <p>Bachelors of Science Computer Science</p>
-                    <p>California State University Sacramento</p>
-                    <p>2014 - present</p>
-                </section>
+                <div class="container">
+                    <section class="text-center wow fadeIn" data-wow-delay="0.2s">
+                        <p>Bachelors of Science Computer Science</p>
+                        <p>Western Governors University</p>
+                        <p>2018 - 2019</p>
+                    </section>
+                    <hr>
+                    <section class="text-center wow fadeIn" data-wow-delay="0.2s">
+                        <p>Computer Science</p>
+                        <p>California State University Sacramento</p>
+                        <p>2014 - 2018</p>
+                    </section>
+                </div>
                 <div class="divider-new pt-5">
                     <h2 class="h2-responsive wow fadeIn" data-wow-delay="0.2s">Skills</h2>
                 </div>
@@ -102,7 +107,6 @@
                                 <p>Node.js</p>
                                 <p>React</p>
                                 <p>Redux</p>
-                                <p>Vue</p>
                                 <p>Webpack</p>
                                 <p>Mocha</p>
                                 <p>Travis CI</p>
@@ -210,24 +214,28 @@
                             </div>
                         </li>
                         <li class="wow fadeIn" data-wow-delay="0.2s">
-                            <i class="fa fa-map-marker elegant-text fa-2x"></i>
+                            <i class="fa fa-map-marker elegant-text fa-3x"></i>
                             <p>Sacramento, CA</p>
                         </li>
                         <li class="wow fadeIn mt-5 pt-2" data-wow-delay="0.4s">
-                            <i class="fa fa-envelope elegant-text fa-2x"></i>
+                            <i class="fa fa-envelope elegant-text fa-3x"></i>
                             <p>ebcperezcsc@gmail.com</p>
                         </li>
                         <li class="wow fadeIn mt-5 pt-2" data-wow-delay="0.4s">
-                            <p>
-                                <i class="fa fa-linkedin-square elegant-text fa-2x"></i>
-                            </p>
-                            <a class="white-text" target="_blank" href="https://www.linkedin.com/in/earl-perez-ba404aa0/">Check me out on LinkedIn</a>
+                            <a class="white-text" target="_blank" href="https://www.linkedin.com/in/earl-perez-ba404aa0/">
+                                <p>
+                                    <i class="fa fa-linkedin-square elegant-text fa-3x"></i>
+                                </p>
+                                Check me out on LinkedIn
+                            </a>
                         </li>
                         <li class="wow fadeIn mt-5 pt-2" data-wow-delay="0.4s">
-                            <p>
-                                <i class="fa fa-github elegant-text fa-2x"></i>
-                            </p>
-                            <a class="white-text" target="_blank" href="https://github.com/ebcp-dev">Visit my GitHub profile</a>
+                            <a class="white-text" target="_blank" href="https://github.com/ebcp-dev">
+                                <p>
+                                    <i class="fa fa-github elegant-text fa-3x"></i>
+                                </p>
+                                Visit my GitHub profile
+                            </a>
                         </li>
                     </ul>
                 </div>
