updated background color

--- a/portfolio.html
+++ b/portfolio.html
@@ -122,15 +122,15 @@
                   <a href="https://resumer.xyz" target="_blank"><img src="./assets/img/resumer-screenshot.jpg" alt=""
                       class="img-fluid"></a>
                   <!-- Resumer screenshot -->
-                  <p class="mt-4">Resumer is a web app where users can resgister accounts and organize their job
+                  <p class="mt-4">Resumer is a web app where users can register accounts and organize their job
                     applications
                     through
                     an interactive data table made with <a href="https://www.ag-grid.com/">ag-Grid</a>. The backend is
                     a REST API written with Express and connected to a
                     PostgreSQL instance hosted on Amazon RDS. Authentication is handled by Passport.js using JWT. The
                     API is tested with Mocha and Chai and is integrated
-                    with Travis CI. The frontend is made with a frontend UI with React, Redux
-                    and Axios to make HTTP requests to the API. Resumer is deployed on Google Cloud Platform's
+                    with Travis CI. The frontend is made with React, Redux
+                    and Axios for making HTTP requests to the API. Resumer is deployed on Google Cloud Platform's
                     Kubernetes Engine using Docker and Kompose.</p>
                 </div>
               </div>
@@ -158,11 +158,10 @@
                       alt="" class="img-fluid"></a>
                   <!-- Forum'd screenshot -->
                   <p class="mt-4">FORUM'd is an online forum where users can register for accounts, submit either link
-                    posts or text
-                    posts, and comment on posts. Node.js/Express is used in the backend REST API. User and post data
-                    are stored in a MongoDB database. React is used to build the view layer of the app with Bootstrap
-                    for styling the UI. Passport.js and Bcrypt handle user authentication and password hashing
-                    respectively.</p>
+                    posts or text posts, and comment on posts. Node.js/Express is used in the backend REST API. User
+                    and Post data are stored in a MongoDB database hosted on mLab. React and <a href="https://mdbootstrap.com/"
+                      target="_blank">MDBootstrap</a>
+                    are used to create the UI. Passport.js and Bcrypt handle user authentication and password hashing.</p>
                 </div>
               </div>
             </div>
